--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -34,7 +34,8 @@
   }
 
   .NavigationItem a:hover,
-  .NavigationItem a:active {
+  .NavigationItem a:active,
+  .NavigationItem a.active {
     background-color: #8f5c2c;
     border-bottom: 4px solid #73df49;
     color: white;
